Fix / Crash on safari 10 + Uneditable input on safari 11

--- a/src/components/choice/Choice.css
+++ b/src/components/choice/Choice.css
@@ -94,4 +94,5 @@
 
 .Choice span[contenteditable="true"] {
   border-bottom: 2px solid #111;
+  user-select: initial;
 }
